PROJECT("EAP Methods Plugins" C)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})

MACRO(EAP_ADD_METHOD METHNAME)
  ADD_LIBRARY(${METHNAME} MODULE ${ARGN})
  SET_TARGET_PROPERTIES(${METHNAME} PROPERTIES PREFIX "" )
  SET_TARGET_PROPERTIES(${METHNAME} PROPERTIES SUFFIX ".emp" )
ENDMACRO(EAP_ADD_METHOD)

###########################
# EAP Methods Plugins Section

# EAP Identity plugin
OPTION(BUILD_IDENTITY "Build EAP Identity Plugin " ON)
	IF (BUILD_IDENTITY)
	   ADD_SUBDIRECTORY(eap_identity)
	ENDIF (BUILD_IDENTITY)

# EAP MD5 plugin
OPTION(BUILD_EAP_MD5 "Build EAP-MD5 Plugin " OFF)
	IF (BUILD_EAP_MD5)
	   ADD_SUBDIRECTORY(eap_md5)
	ENDIF (BUILD_EAP_MD5)

# EAP TLS plugin
OPTION(BUILD_EAP_TLS "Build EAP-TLS Plugin " OFF)
	IF (BUILD_EAP_TLS)
	   ADD_SUBDIRECTORY(eap_tls)
	ENDIF (BUILD_EAP_TLS)
